--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ idds-doma
 idds-workflow
 panda-client
 pyyaml
-git+https://github.com/lsst/ctrl_bps@main
-git+https://github.com/lsst/daf_butler@main#egg=lsst-daf-butler
-git+https://github.com/lsst/resources@main#egg=lsst-resources
-git+https://github.com/lsst/utils@main#egg=lsst-utils
+git+https://github.com/lsst/ctrl_bps@v25.0.x#egg=lsst-ctrl-bps
+git+https://github.com/lsst/daf_butler@v25.0.x#egg=lsst-daf-butler
+git+https://github.com/lsst/resources@v25.0.x#egg=lsst-resources
+git+https://github.com/lsst/utils@v25.0.x#egg=lsst-utils
