--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,10 +27,10 @@ dependencies = [
     "idds-doma",
     "idds-workflow",
     "panda-client",
-    "lsst-ctrl-bps",
-    "lsst-daf-butler",
-    "lsst-resources",
-    "lsst-utils"
+    "lsst-ctrl-bps >=26.0,<26.100",
+    "lsst-daf-butler >=26.0,<26.100",
+    "lsst-resources >=26.0,<26.100",
+    "lsst-utils >=26.0,<26.100"
 ]
 
 dynamic = ["version"]
