--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "lsst-ctrl-bps-panda"
+requires-python = ">=3.10.0"
 description = "PanDA plugin for lsst-ctrl-bps."
 license = {text = "BSD 3-Clause License"}
 readme = "README.rst"
