update the default value

--- a/config/bps_panda.yaml
+++ b/config/bps_panda.yaml
@@ -4,8 +4,10 @@ placeholderParams: ['qgraphNodeId', 'qgraphId']
 defaultPreCmdOpts: "--long-log --log-level=VERBOSE --log-file payload-log.json --log-label REPO={butlerConfig}"
 qgraphPreCmdOpts: "--long-log --log-level=VERBOSE"  # don't need payload-log.json on submit side.
 
+requestMemory: 4000          # PanDA does the scheduling based on memory request
+
 # Memory multipler for boosting memory
-memoryMultiplier: 1.2
+memoryMultiplier: 1.5
 
 # Limit the number of jobs in a single PanDA task
 maxJobsPerTask: 10000
