--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ version = { attr = "lsst_versions.get_lsst_version" }
     filename = "doc/lsst.ctrl.bps.panda/CHANGES.rst"
     directory = "doc/changes"
     title_format = "lsst-ctrl-bps-panda {version} ({project_date})"
-    issue_format = "`{issue} <https://jira.lsstcorp.org/browse/{issue}>`_"
+    issue_format = "`{issue} <https://rubinobs.atlassian.net/browse/{issue}>`_"
 
     [[tool.towncrier.type]]
         directory = "feature"
