--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Install pytest packages
         run: |
           pip install \
-            pytest pytest-xdist pytest-openfiles pytest-cov
+            pytest pytest-xdist pytest-cov
 
       - name: List installed packages
         run: |
@@ -52,7 +52,7 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest -r a -v --open-files --cov=python --cov=tests --cov-report=xml --cov-report=term --cov-branch
+          pytest -r a -v --cov=python --cov=tests --cov-report=xml --cov-report=term --cov-branch
       - name: Upload coverage to codecov
         uses: codecov/codecov-action@v4
         with:
