--- a/config/bps_panda_eventservice.yaml
+++ b/config/bps_panda_eventservice.yaml
@@ -3,8 +3,8 @@
 # list of steps' labels to enable EventService
 enableEventService: isr,step1
 
-# When EventService is enabled, if requestWalltime and maxWmsJobWalltime are defined, max_payloads_per_panda_job = int(maxWmsJobWalltime / requestWalltime)
+# When EventService is enabled, if requestWalltime and maxWmsJobWalltime are defined,
+# max_payloads_per_panda_job = int(maxWmsJobWalltime / requestWalltime)
 # Otherwise max_payloads_per_panda_job = int(maxPayloadsPerPandaJob)
 maxWmsJobWalltime: 21600
 maxPayloadsPerPandaJob: 10
-
