--- a/config/bps_panda_eventservice.yaml
+++ b/config/bps_panda_eventservice.yaml
@@ -1,6 +1,6 @@
 # enable EventService to have multiple payloads per PanDA job
 
-# list of steps' labels to enable EventService
+# list of bps job labels to enable EventService
 enableEventService: isr,step1
 
 # When EventService is enabled, if requestWalltime and maxWmsJobWalltime are defined,
