--- a/config/bps_frdf.yaml
+++ b/config/bps_frdf.yaml
@@ -31,10 +31,6 @@ jobContainer: >
   /bin/bash -c "{payloadCommand}" >&2;
 jobCleanup: "rm -fr EXEC_REPO-*;"
 
-
-# Specify memory request for executionButler, pipetaskInit and forcedPhotCoadd, placeholder for now
-executionButler:
-  queue: "CC-IN2P3_Rubin_Merge"
-
+# Specify memory request, queue for finalJob
 finalJob:
   queue: "CC-IN2P3_Rubin_Merge"
