--- a/config/bps_ukdf.yaml
+++ b/config/bps_ukdf.yaml
@@ -32,10 +32,6 @@ jobContainer: >
   /bin/bash -c "{payloadCommand}" >&2;
 jobCleanup: "rm -fr EXEC_REPO-*;"
 
-
-# Specify memory request for executionButler, pipetaskInit and forcedPhotCoadd, placeholder for now
-executionButler:
-  queue: "LANCS_Rubin_Merge"
-
+# Specify memory request, queue for finalJob
 finalJob:
   queue: "LANCS_Rubin_Merge"
