--- a/pyproject.toml
+++ b/pyproject.toml
@@ -156,6 +156,7 @@ select = [
     "UP",  # pyupgrade
     "C4",
     "I",  # isort
+    "RUF022",  # sort __all__
 ]
 extend-select = [
     "RUF100", # Warn about unused noqa
