pass IDDS_MAX_NAME_LENGTH to remote build task

--- a/config/bps_remote.yaml
+++ b/config/bps_remote.yaml
@@ -22,6 +22,7 @@ remoteBuild:
     export PANDACACHE_URL=$PANDA_URL_SSL;
     export PANDA_URL=$PANDA_URL_SSL;
     export PANDA_BEHIND_REAL_LB=true;
+    export IDDS_MAX_NAME_LENGTH={IDDS_MAX_NAME_LENGTH};
     {custom_lsst_setup}
     python3 ${CTRL_BPS_PANDA_DIR}/python/lsst/ctrl/bps/panda/edgenode/build_cmd_line_decoder.py \
             _download_cmd_line_ _build_cmd_line_ _compute_site_
