--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: '3.11'
+          python-version: '3.13'
           cache: "pip"
           cache-dependency-path: "setup.cfg"
 
@@ -36,8 +36,8 @@ jobs:
         run: uv pip install --system --no-deps -v .
 
       - name: Install documenteer
-        run: uv pip install --system 'documenteer[pipelines]==0.8.2' sphinx-automodapi==0.19
+        run: uv pip install --system -r doc/requirements.txt
 
       - name: Build documentation
         working-directory: ./doc
-        run: package-docs build -n
+        run: package-docs build -n -W
